# sw_5_backend

./: Cargo.toml  FRONTEND_API_GUIDE.md  README.md
.cargo/: config.toml
data/planner.db/: 000013.sst  000016.sst  000021.sst  000028.sst  IDENTITY  MANIFEST-000005  MANIFEST-000010  MANIFEST-000018  MANIFEST-000023  MANIFEST-000032  OPTIONS-000007  OPTIONS-000012
src/: auth.rs  db.rs  error.rs  main.rs  models.rs  openapi.rs
src/routes/: mod.rs  photo.rs  plan.rs  user.rs
ㅡㅡ/: DESIGN.md  index.html  login.html  signup.html
